--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "author": "odairdev",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node-dev --poll --transpile-only --ignore-watch node_modules --respawn ./src/shared/http/server.ts"
+    "dev": "ts-node-dev --poll --transpile-only --ignore-watch node_modules --respawn ./src/shared/infra/http/server.ts"
   },
   "dependencies": {
     "@types/express": "^4.17.13",
     "@types/uuid": "^8.3.4",
     "express": "^4.18.1",
-    "typeorm": "^0.3.7",
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "0.2.45",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
